cash flow nav component is modified

--- a/src/app/components/page_components/dashboard_components/nav_components/cashflow-nav-component/cashflow-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/cashflow-nav-component/cashflow-nav-component.html
@@ -23,8 +23,13 @@
 
 <div class="dashboard-container">
     <!-- Reusable List (SEARCH + TABLE + PAGINATION) -->
-    <app-dashboard-table-component [data]="items()" [columns]="columns" [showActions]="false"
+    <app-dashboard-table-component [data]="items()" [columns]="columns" [showActions]="true"
         searchLabel="Search cashflow" [searchValue]="searchText()" [totalCount]="totalCount()" [pageSize]="pageSize()"
         (searchChange)="onSearch($event)" (pageChange)="onPageChange($event)">
+        <ng-template tableActions let-row>
+            <button mat-icon-button color="primary" (click)="view(row)">
+                <mat-icon>visibility</mat-icon>
+            </button>
+        </ng-template>
     </app-dashboard-table-component>
 </div>
