cash flow pdf dialog box is corrected

--- a/src/app/components/reusable_components/dialog_boxes/cashflow-receipt-dialog-box-component/cashflow-receipt-dialog-box-component.html
+++ b/src/app/components/reusable_components/dialog_boxes/cashflow-receipt-dialog-box-component/cashflow-receipt-dialog-box-component.html
@@ -13,12 +13,11 @@
     <iframe *ngIf="hasPdf() && pdfUrl() as url" class="receipt-frame" [src]="url | safeUrl" (load)="onLoad()">
     </iframe>
 
-    <!-- ================= ACTIONS ================= -->
-    <mat-dialog-actions align="end">
+</mat-dialog-content>
 
-        <!-- CLOSE -->
-        <button mat-button [disabled]="saving()" (click)="onClose()">
-            Close
-        </button>
-
-    </mat-dialog-actions>
+<!-- ================= ACTIONS ================= -->
+<mat-dialog-actions align="end">
+    <button mat-button (click)="onClose()" [disabled]="saving()">
+        Close
+    </button>
+</mat-dialog-actions>
